# hyperx-htmx

./: .eslintrc  .gitignore  CHANGELOG.md  HX_Commands_Reference.md  HX_Templating_Delcarations.md  Installation_manual.md  README.md  TODO  hxperx  hyperx_middleware.py  prod_env.py  pyproject.toml  requirements.txt  setup.py
_old/: parser.py
declaratives/static/css/: gallery.css
declaratives/static/js/: gallery_start_head.js
declaratives/templates/declaratives/: component_gallery.html  hyperx_playground.html  showcase_home.html  showcase_vessel.html
declaratives/templates/declaratives/components/: chart_performance.html  dynamic_forms.html  live_charts.html  paginated_table.html  (+3 more)
htmx_core/static/js/: htmx_changelog.json  htmx_cheatcode.json  htmx_client.js  json-enc.min.js  lazy_reflector_load.js  morphdom-swap.min.js  sse.min.js
htmx_core/templatetags/: README.md  htmx_tags.py
htmx_core/testkits/: README.md
hyperx/: .gitignore  MANIFEST.in  examples.txt  middleware.py  requirements.txt
hyperx/core/: cx_router_test.py
hyperx/core/_reports/: cx_log.sqlite3
hyperx/core/hx/: hx_actions_rules.py  hx_converter.py  hx_runtime_compiler.py
hyperx/core/plugins/: tester.py
hyperx/lib/cx/: cx_links.py  cx_router.py
hyperx/loader/: hyperx_config.yaml
hyperx/opt/hyperx/: .env.example  core_install_hyperx.py
hyperx/static/hxjs/: hyperx-events.js
hyperx/templates/: base.html  login_fallback.html
hyperx/templates/partials/: fragment_daphne.html
hyperx/templates/sys/: status.html  status_daphne.html
hyperx/templatetags/: hyperx.py
(+13 files in other folders)
